5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1709_3061.log
== TEST (2019-05-02 10:21:52) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print(qnt/150)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print(qnt/30)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print(qnt/40)
else:
	print(ta)
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14.166666666666666
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:23:01) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print(qnt//150)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print(qnt//30)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print(qnt//40)
else:
	print(ta)
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:23:30) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print(qnt//150)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print(qnt//30)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print(qnt//40)
else:
	print(ta)
	print("Entrada invalida")
-- EXECUTION TIME:
0.309126
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DRAGON
0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:23:49) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print(qnt//150)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print(qnt//30)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print(qnt//40)
else:
	print(ta)
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:23:49) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print(qnt//150)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print(qnt//30)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print(qnt//40)
else:
	print(ta)
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:23:49) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print(qnt//150)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print(qnt//30)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print(qnt//40)
else:
	print(ta)
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:24:40) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)".upper())
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print(qnt//150)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print(qnt//30)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print(qnt//40)
else:
	print(ta)
	print("Entrada invalida")
-- OUTPUT:
TIPO DE ATAQUE: (TERRESTRE/AEREO/MARITIMO)RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:27:44) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print(ta)
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:27:58) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print(ta)
	print("Entrada invalida")
-- EXECUTION TIME:
0.168471
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DRAGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:28:36) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.154041
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DRAGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:28:42) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:29:26) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.154548
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DRAGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:30:40) 
-- CODE:
ta.upper() = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 1
    ta.upper() = input()
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:30:59) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)").upper()
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:31:58) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.17768
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
RHAEGAL
15
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:31:58) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.195248
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
VISERION
12
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:

-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
RHAEGAL
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:31:59) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.17543
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DRAGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
RHAEGAL
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:31:59) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.19554
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
RHAEGAL
15
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
DRAGON
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:31:59) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.11349
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DRAGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:33:13) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO).upper()")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:33:51) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)").upper()
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:46:54) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)".upper())
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
TIPO DE ATAQUE: (TERRESTRE/AEREO/MARITIMO)RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:06) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
ta = (ta.upper())
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:34) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
print(ta.upper())
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
AEREO
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:44) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
print(ta.upper())
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
AEREO
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:52:46) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
print(ta.upper())
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.14379
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
AEREO
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
TERRESTRE
DRAGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
MARITIMO
VISERION
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:53:39) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if((ta.upper()) == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:54:28) 
-- CODE:
ta = input("tipo de ataque: (TERRESTRE/AEREO/MARITIMO)")
qnt = int(input("quantidade de unidades dstruidas:"))
if(qnt>0):
	if(ta.upper() == "TERRESTRE"):
		print("DRAGON")
		print((qnt//150)+1)
	elif(ta.upper() == "AEREO"):
		print("RHAEGAL")
		print((qnt//30)+1)
	elif(ta.upper() == "MARITIMO"):
		print("VISERION")
		print((qnt//40)+1)
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
